# nova

./: Cargo.toml  Cross.toml  Dockerfile.cross
.github/workflows/: build.yml
exes/cache/: Cargo.toml
exes/cache/src/: main.rs
exes/gateway/: Cargo.toml
exes/ratelimit/: Cargo.toml
exes/rest/: Cargo.toml
exes/rest/src/: handler.rs  lib.rs
exes/webhook/: Cargo.toml
libs/all_in_one/: Cargo.toml  build.rs
libs/leash/: Cargo.toml
libs/leash/src/: lib.rs
libs/proto/: Cargo.toml
libs/shared/: Cargo.toml
