[workspace]
members = [
    "exes/cache/",
    "exes/gateway/",
    "exes/rest/",
    "exes/webhook/",
    "exes/ratelimit/",


		"libs/all_in_one/",
    "libs/proto/",
    "libs/shared/",
    "libs/leash/"
]
resolver = "2"
[workspace.dependencies]
shared = { path = "libs/shared" }
proto =  { path = "libs/proto" }
leash = { path = "libs/leash" }

tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.4.0"

# Fix to include bindgen
aws-lc-rs = { version = "1", features = ["bindgen"] }

anyhow = "1"

tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.23" }
opentelemetry-http = "0.12"

criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4.4"
tracing-test = "0.2.5"
tracing-subscriber = "0.3.18"
test-log = { version = "*", features = ["trace"] }
env_logger = "0.11.3"
