[package]
name = "gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { workspace = true }
proto = { workspace = true }
leash = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-lc-rs = { workspace = true }

tokio-stream = "0.1.15"
twilight-gateway = { default-features = false, features = ["rustls-webpki-roots"], version = "0.15.4" }
twilight-model = "0.15.4"
bytes = "1.6.0"
async-nats = "0.35.1"
