[package]
name = "ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { workspace = true }
proto = { workspace = true }
leash = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }

twilight-http-ratelimiting = "0.15.3"
tonic = "0.11.0"
tokio-stream = "0.1.15"
redis = { version = "0.25.4", features = ["cluster", "connection-manager", "tokio-comp"] }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }
env_logger = { workspace = true }

[[bench]]
name = "bucket"
harness = false
