[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
aws-lc-rs = { workspace = true }

config = { version = "0.14", default-features = false, features = ["json", "yaml-rust", "ini"] }
redis = { version = "0.25.4", features = ["cluster", "connection-manager", "tokio-comp"] }

async-nats = "0.35.1"
twilight-model = "0.15.4"
anyhow = "1.0.86"
opentelemetry-otlp = "0.16.0"
